# PLFM_RADAR

./: pyproject.toml
.github/workflows/: ci-tests.yml
5_Simulations/: array_pattern_Kaiser25dB_like.py
5_Simulations/Antenna/: Quartz_Waveguide.py  openems_quartz_slotted_wg_10p5GHz.py
5_Simulations/DAC_ReconstructionFilter/: Generate_ChirpcsvFile.py
5_Simulations/Fencing/: Via_fencing.py  Via_fencing2.py
8_Utils/Python/: CSV_radar.py  Generic_Triangular_Frequency.py  RADAR_eq.py  patch_antenna.py
9_Firmware/9_1_Microcontroller/9_1_3_C_Cpp_Code/: main.cpp
9_Firmware/9_2_FPGA/: radar_receiver_final.v  radar_system_top.v  run_regression.sh  usb_data_interface.v
9_Firmware/9_2_FPGA/constraints/: xc7a50t_ftg256.xdc
9_Firmware/9_2_FPGA/tb/: tb_radar_receiver_final.v  tb_system_e2e.v  tb_usb_data_interface.v
9_Firmware/9_2_FPGA/tb/cosim/: compare.py  fpga_model.py  gen_multiseg_golden.py  rx_final_doppler_out.csv  validate_mem_files.py
9_Firmware/9_2_FPGA/tb/cosim/real_data/: golden_reference.py
9_Firmware/9_2_FPGA/tb/golden/: golden_doppler.mem
9_Firmware/9_3_GUI/: GUI_PyQt_Map.py  GUI_V1.py  GUI_V2.py  GUI_V3.py  GUI_V4.py  GUI_V4_2_CSV.py  GUI_V5.py  GUI_V5_Demo.py  GUI_V6.py  GUI_V65_Tk.py  GUI_V6_Demo.py  test_radar_dashboard.py
9_Firmware/9_3_GUI/v7/: dashboard.py  hardware.py  map_widget.py
9_Firmware/tests/cross_layer/: contract_parser.py  test_cross_layer_contract.py
